# election-forecasting

./: .gitignore  README.md  pyproject.toml
valgsim/: __main__.py  data_loader.py  electoral.py  model.py  simulator.py
