[tool.poetry]
name = "valgsim"
version = "0.1.0"
description = ""
authors = ["Mathias Lohne <foss@mathiaslohne.com>"]

packages = [
    { include="valgsim", from="." },
]

[tool.black]
line-length = 120
target_version = ['py37']
include = '\.py$'

[tool.isort]
line_length=120                # corresponds to -w  flag
multi_line_output=3            # corresponds to -m  flag
include_trailing_comma=true    # corresponds to -tc flag
skip_glob = '^((?!py$).)*$'    # this makes sort all Python files

[tool.poetry.dependencies]
python = ">=3.7.1,<3.11"
numpy = "^1.21.2"
pandas = "^1.3.2"
matplotlib = "^3.4.3"
pyyaml = "^5.4.1"
dacite = "^1.6.0"
requests = "^2.26.0"

[tool.poetry.dev-dependencies]
black = "==21.7b0"
mypy = ">=0.910"
flake8 = "^3.9.2"
isort = "^5.9.3"

[tool.poetry.scripts]
model = "valgsim.__main__:main"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
